// Vitest Snapshot v1

exports[`Map.vue > check loading map 1`] = `
<div
  class="h-full w-full"
  data-v-496398c8=""
>
  <div
    class="flex items-center justify-center loading"
    data-v-496398c8=""
  >
    <div
      class="inline-block h-8 w-8 animate-spin rounded-full border-4 border-solid border-current border-r-transparent align-[-0.125em] motion-reduce:animate-[spin_1.5s_linear_infinite]"
      role="status"
    >
      <span
        class="!absolute !-m-px !h-px !w-px !overflow-hidden !whitespace-nowrap !border-0 !p-0 ![clip:rect(0,0,0,0)]"
      >
        Loading...
      </span>
    </div>
  </div>
</div>
`;

exports[`Map.vue > render component 1`] = `
<div
  class="h-full w-full"
  data-v-496398c8=""
>
  <div
    class="w-full max-h-full"
    data-v-496398c8=""
    id="chartdiv"
  />
</div>
`;
